# template_crew

./: README.md  pyproject.toml
src/template_crew/: crew.py  main.py
