[tool.poetry]
name = "template_crew"
version = "0.1.0"
description = "template_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.36.1" }

[tool.poetry.scripts]
template_crew = "template_crew.main:run"
train = "template_crew.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
